# Sentinela

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  agente.py  docker-compose.yml  instalar_rotina.ps1  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.ps1  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml
app/: agente.py  config.py  llm.py  scanner.py
scripts/: wait-for-ollama.sh
tests/: test_import.py
